--- a/.gitattributes
+++ b/.gitattributes
@@ -987,6 +987,7 @@ components/codetools/tests/fdt_basic.pas svneol=native#text/plain
 components/codetools/tests/fdt_classhelper.pas svneol=native#text/plain
 components/codetools/tests/fdt_nestedclasses.pas svneol=native#text/plain
 components/codetools/tests/fdt_objccategory.pas svneol=native#text/plain
+components/codetools/tests/fdt_typehelper.pas svneol=native#text/plain
 components/codetools/tests/fdtbase.pas svneol=native#text/plain
 components/codetools/tests/finddeclarationtest.lpi svneol=native#text/plain
 components/codetools/tests/finddeclarationtest.lpr svneol=native#text/plain
