--- a/.gitattributes
+++ b/.gitattributes
@@ -6960,6 +6960,7 @@ lcl/interfaces/cocoa/Makefile svneol=native#text/plain
 lcl/interfaces/cocoa/Makefile.compiled svneol=native#text/plain
 lcl/interfaces/cocoa/Makefile.fpc svneol=native#text/plain
 lcl/interfaces/cocoa/alllclintfunits.pas svneol=native#text/plain
+lcl/interfaces/cocoa/cocoa_extra.pas svneol=native#text/plain
 lcl/interfaces/cocoa/cocoacaret.pas svneol=native#text/pascal
 lcl/interfaces/cocoa/cocoagdiobjects.pas svneol=native#text/plain
 lcl/interfaces/cocoa/cocoaint.pas svneol=native#text/plain
