cocoa: Makes the native modal mode selective via a define
git-svn-id: trunk@49779 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -6965,6 +6965,7 @@ lcl/interfaces/cocoa/Makefile.fpc svneol=native#text/plain
 lcl/interfaces/cocoa/alllclintfunits.pas svneol=native#text/plain
 lcl/interfaces/cocoa/cocoa_extra.pas svneol=native#text/plain
 lcl/interfaces/cocoa/cocoacaret.pas svneol=native#text/pascal
+lcl/interfaces/cocoa/cocoadefines.inc svneol=native#text/plain
 lcl/interfaces/cocoa/cocoagdiobjects.pas svneol=native#text/plain
 lcl/interfaces/cocoa/cocoaint.pas svneol=native#text/plain
 lcl/interfaces/cocoa/cocoalclintf.inc svneol=native#text/pascal
