New options file for package AnchorDockingDsgn. Refactored out from earlier commit.
git-svn-id: trunk@49786 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -606,6 +606,7 @@ components/anchordocking/anchordockpkg.pas svneol=native#text/plain
 components/anchordocking/anchordockstorage.pas svneol=native#text/plain
 components/anchordocking/anchordockstr.pas svneol=native#text/plain
 components/anchordocking/design/ADLayoutDefault.xml svneol=native#text/plain
+components/anchordocking/design/anchordesktopoptions.pas svneol=native#text/pascal
 components/anchordocking/design/anchordockingdsgn.lpk svneol=native#text/plain
 components/anchordocking/design/anchordockingdsgn.pas svneol=native#text/plain
 components/anchordocking/design/registeranchordocking.lfm svneol=native#text/plain
