New icons for JumpToProcedure* commands, by Ondrej Pokorny.
git-svn-id: trunk@49809 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -6305,6 +6305,8 @@ images/menu/menu_jumpto_implementationuses.png -text svneol=unset#image/png
 images/menu/menu_jumpto_initialization.png -text svneol=unset#image/png
 images/menu/menu_jumpto_interface.png -text svneol=unset#image/png
 images/menu/menu_jumpto_interfaceuses.png -text svneol=unset#image/png
+images/menu/menu_jumpto_procedurebegin.png -text svneol=unset#image/png
+images/menu/menu_jumpto_procedureheader.png -text svneol=unset#image/png
 images/menu/menu_manage_desktops.png -text svneol=unset#image/png
 images/menu/menu_new.png -text svneol=unset#image/png
 images/menu/menu_pause.png -text svneol=unset#image/png
