--- a/.gitattributes
+++ b/.gitattributes
@@ -5562,6 +5562,7 @@ ide/abstractsmethodsdlg.lfm svneol=native#text/plain
 ide/abstractsmethodsdlg.pas svneol=native#text/plain
 ide/addtoprojectdlg.lfm svneol=native#text/plain
 ide/addtoprojectdlg.pas svneol=native#text/pascal
+ide/advancedipc.pp svneol=native#text/pascal
 ide/advhistorylist.pas svneol=native#text/pascal
 ide/allcompileroptions.lfm svneol=native#text/plain
 ide/allcompileroptions.pas svneol=native#text/pascal
