codetools: tests for parent class helpers
git-svn-id: trunk@49985 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -996,6 +996,8 @@ components/codetools/tests/fdtbase.pas svneol=native#text/plain
 components/codetools/tests/finddeclarationtest.lpi svneol=native#text/plain
 components/codetools/tests/finddeclarationtest.lpr svneol=native#text/plain
 components/codetools/tests/fpctests/tchlp41.pp svneol=native#text/plain
+components/codetools/tests/fpctests/tchlp46.pp svneol=native#text/plain
+components/codetools/tests/fpctests/tchlp47.pp svneol=native#text/plain
 components/codetools/tests/parsertbase.pas svneol=native#text/plain
 components/codetools/tests/parsertest.lpi svneol=native#text/plain
 components/codetools/tests/parsertest.lpr svneol=native#text/plain
