codetools: added helper tests
git-svn-id: trunk@49995 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -995,9 +995,15 @@ components/codetools/tests/fdt_typehelper.pas svneol=native#text/plain
 components/codetools/tests/fdtbase.pas svneol=native#text/plain
 components/codetools/tests/finddeclarationtest.lpi svneol=native#text/plain
 components/codetools/tests/finddeclarationtest.lpr svneol=native#text/plain
+components/codetools/tests/fpctests/tchlp36.pp svneol=native#text/plain
+components/codetools/tests/fpctests/tchlp40.pp svneol=native#text/plain
 components/codetools/tests/fpctests/tchlp41.pp svneol=native#text/plain
+components/codetools/tests/fpctests/tchlp42.pp svneol=native#text/plain
 components/codetools/tests/fpctests/tchlp46.pp svneol=native#text/plain
 components/codetools/tests/fpctests/tchlp47.pp svneol=native#text/plain
+components/codetools/tests/fpctests/tchlp48.pp svneol=native#text/plain
+components/codetools/tests/fpctests/tchlp49.pp svneol=native#text/plain
+components/codetools/tests/fpctests/tchlp50.pp svneol=native#text/plain
 components/codetools/tests/parsertbase.pas svneol=native#text/plain
 components/codetools/tests/parsertest.lpi svneol=native#text/plain
 components/codetools/tests/parsertest.lpr svneol=native#text/plain
