--- a/.gitattributes
+++ b/.gitattributes
@@ -1006,6 +1006,7 @@ components/codetools/tests/fpctests/tchlp49.pp svneol=native#text/plain
 components/codetools/tests/fpctests/tchlp50.pp svneol=native#text/plain
 components/codetools/tests/fpctests/tchlp52.pp svneol=native#text/plain
 components/codetools/tests/fpctests/tchlp53.pp svneol=native#text/plain
+components/codetools/tests/fpctests/tchlp6.pp svneol=native#text/plain
 components/codetools/tests/parsertbase.pas svneol=native#text/plain
 components/codetools/tests/parsertest.lpi svneol=native#text/plain
 components/codetools/tests/parsertest.lpr svneol=native#text/plain
