projectgroups: initial implementation from Michael Van Canneyt
git-svn-id: trunk@50076 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -3348,6 +3348,14 @@ components/printers/win32/winprinters_h.inc svneol=native#text/pascal
 components/printers/win32/winprndialogs.inc svneol=native#text/pascal
 components/printers/win32/winutilprn.pas svneol=native#text/pascal
 components/printers/win32/winutilprnconst.inc svneol=native#text/pascal
+components/projectgroups/README.txt svneol=native#text/plain
+components/projectgroups/lazprojectgroup.pas svneol=native#text/plain
+components/projectgroups/lazprojectgroups.lpk svneol=native#text/plain
+components/projectgroups/projectgroup.pp svneol=native#text/plain
+components/projectgroups/projectgroupeditor.lfm svneol=native#text/plain
+components/projectgroups/projectgroupeditor.pas svneol=native#text/plain
+components/projectgroups/projectgroupintf.pp svneol=native#text/plain
+components/projectgroups/regprojectgroup.pp svneol=native#text/plain
 components/projecttemplates/Makefile svneol=native#text/plain
 components/projecttemplates/Makefile.compiled svneol=native#text/plain
 components/projecttemplates/Makefile.fpc svneol=native#text/plain
