codetools: tests: readme
git-svn-id: trunk@50078 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -996,6 +996,7 @@ components/codetools/tests/fdt_with.pas svneol=native#text/plain
 components/codetools/tests/fdtbase.pas svneol=native#text/plain
 components/codetools/tests/finddeclarationtest.lpi svneol=native#text/plain
 components/codetools/tests/finddeclarationtest.lpr svneol=native#text/plain
+components/codetools/tests/fpctests/README.txt svneol=native#text/plain
 components/codetools/tests/fpctests/tchlp36.pp svneol=native#text/plain
 components/codetools/tests/fpctests/tchlp40.pp svneol=native#text/plain
 components/codetools/tests/fpctests/tchlp41.pp svneol=native#text/plain
@@ -1009,6 +1010,7 @@ components/codetools/tests/fpctests/tchlp52.pp svneol=native#text/plain
 components/codetools/tests/fpctests/tchlp53.pp svneol=native#text/plain
 components/codetools/tests/fpctests/tchlp6.pp svneol=native#text/plain
 components/codetools/tests/fpctests/tchlp7.pp svneol=native#text/plain
+components/codetools/tests/laztests/README.txt svneol=native#text/plain
 components/codetools/tests/parsertbase.pas svneol=native#text/plain
 components/codetools/tests/parsertest.lpi svneol=native#text/plain
 components/codetools/tests/parsertest.lpr svneol=native#text/plain
