--- a/.gitattributes
+++ b/.gitattributes
@@ -1011,6 +1011,7 @@ components/codetools/tests/fpctests/tchlp53.pp svneol=native#text/plain
 components/codetools/tests/fpctests/tchlp6.pp svneol=native#text/plain
 components/codetools/tests/fpctests/tchlp7.pp svneol=native#text/plain
 components/codetools/tests/laztests/README.txt svneol=native#text/plain
+components/codetools/tests/laztests/tdefaultproperty1.pas svneol=native#text/plain
 components/codetools/tests/parsertbase.pas svneol=native#text/plain
 components/codetools/tests/parsertest.lpi svneol=native#text/plain
 components/codetools/tests/parsertest.lpr svneol=native#text/plain
