codetools: added tests bug #28866
git-svn-id: trunk@50086 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -1013,6 +1013,8 @@ components/codetools/tests/fpctests/tchlp7.pp svneol=native#text/plain
 components/codetools/tests/laztests/README.txt svneol=native#text/plain
 components/codetools/tests/laztests/bug28861_unit1.pas svneol=native#text/plain
 components/codetools/tests/laztests/bug28861_unit2.pas svneol=native#text/plain
+components/codetools/tests/laztests/bug28866_prg.pas svneol=native#text/plain
+components/codetools/tests/laztests/bug28866_unit1.pas svneol=native#text/plain
 components/codetools/tests/laztests/tdefaultproperty1.pas svneol=native#text/plain
 components/codetools/tests/parsertbase.pas svneol=native#text/plain
 components/codetools/tests/parsertest.lpi svneol=native#text/plain
