codetools: added tests helper and protected
git-svn-id: trunk@50114 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -997,6 +997,8 @@ components/codetools/tests/fdtbase.pas svneol=native#text/plain
 components/codetools/tests/finddeclarationtest.lpi svneol=native#text/plain
 components/codetools/tests/finddeclarationtest.lpr svneol=native#text/plain
 components/codetools/tests/fpctests/README.txt svneol=native#text/plain
+components/codetools/tests/fpctests/tchlp14.pp svneol=native#text/plain
+components/codetools/tests/fpctests/tchlp15.pp svneol=native#text/plain
 components/codetools/tests/fpctests/tchlp36.pp svneol=native#text/plain
 components/codetools/tests/fpctests/tchlp40.pp svneol=native#text/plain
 components/codetools/tests/fpctests/tchlp41.pp svneol=native#text/plain
