--- a/.gitattributes
+++ b/.gitattributes
@@ -1012,6 +1012,12 @@ components/codetools/tests/fpctests/tchlp52.pp svneol=native#text/plain
 components/codetools/tests/fpctests/tchlp53.pp svneol=native#text/plain
 components/codetools/tests/fpctests/tchlp6.pp svneol=native#text/plain
 components/codetools/tests/fpctests/tchlp7.pp svneol=native#text/plain
+components/codetools/tests/fpctests/tudots.dot.next.pp svneol=native#text/plain
+components/codetools/tests/fpctests/tudots.dot.pp svneol=native#text/plain
+components/codetools/tests/fpctests/tudots.dot.prog.pp svneol=native#text/plain
+components/codetools/tests/fpctests/tudots.pp svneol=native#text/plain
+components/codetools/tests/fpctests/tudots.prog.pp svneol=native#text/plain
+components/codetools/tests/fpctests/tudots.test.pp svneol=native#text/plain
 components/codetools/tests/fpctests/uchlp12.pp svneol=native#text/plain
 components/codetools/tests/laztests/README.txt svneol=native#text/plain
 components/codetools/tests/laztests/bug28861_unit1.pas svneol=native#text/plain
