--- a/ide/lazarus.lpi
+++ b/ide/lazarus.lpi
@@ -1475,6 +1475,11 @@
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Frame"/>
       </Unit>
+      <Unit>
+        <Filename Value="../packager/editablepackage.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="EditablePackage"/>
+      </Unit>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
