icons_to_html: replace checkboxes by options menu (by Roland Hahn)

--- a/tools/icons_to_html/icontable.lpi
+++ b/tools/icons_to_html/icontable.lpi
@@ -81,6 +81,7 @@
       <Unit>
         <Filename Value="icontable.lpr"/>
         <IsPartOfProject Value="True"/>
+        <UnitName Value="IconTable"/>
       </Unit>
       <Unit>
         <Filename Value="main.pas"/>
