lcl: consistent -g -gl

--- a/lcl/Makefile.fpc
+++ b/lcl/Makefile.fpc
@@ -77,7 +77,7 @@ DBG_OPTIONS=-gw
 endif
 
 [compiler]
-options=-gl -Sic $(LCL_DISABLE_CHECKS) $(DBG_OPTIONS)
+options=-MObjFPC -Scghi -O1 -g -gl -l -vewnhibq $(LCL_DISABLE_CHECKS) $(DBG_OPTIONS)
 unittargetdir=units/$(CPU_TARGET)-$(OS_TARGET)
 unitdir=../packager/units/$(CPU_TARGET)-$(OS_TARGET) ../components/lazutils/lib/$(CPU_TARGET)-$(OS_TARGET) ../components/freetype/lib/$(CPU_TARGET)-$(OS_TARGET) . $(NONWIN32) forms widgetset
 includedir=include
