--- a/lcl/interfaces/customdrawn/Makefile.fpc
+++ b/lcl/interfaces/customdrawn/Makefile.fpc
@@ -15,7 +15,7 @@ DBG_OPTIONS=-gw
 endif
 
 [compiler]
-options=-gl $(DBG_OPTIONS)
+options=-MObjFPC -Scghi -O1 -g -gl -l -vewnhibq $(DBG_OPTIONS)
 unitdir=../../units/$(CPU_TARGET)-$(OS_TARGET) \
     ../../../packager/units/$(CPU_TARGET)-$(OS_TARGET) \
     ../../../components/lazutils/lib/$(CPU_TARGET)-$(OS_TARGET) \
