--- a/lcl/interfaces/cocoa/Makefile.fpc
+++ b/lcl/interfaces/cocoa/Makefile.fpc
@@ -8,7 +8,7 @@ packages=rtl
 units=lcl.pas
 
 [compiler]
-options=-gw -gl -dcocoa
+options=-MObjFPC -Scghi -O1 -gl -l -vewnhibq -gw -dcocoa
 unitdir=../../units/$(CPU_TARGET)-$(OS_TARGET) \
     ../../../packager/units/$(CPU_TARGET)-$(OS_TARGET) \
     ../../../components/lazutils/lib/$(CPU_TARGET)-$(OS_TARGET) \
