--- a/lcl/interfaces/gtk2/Makefile.fpc
+++ b/lcl/interfaces/gtk2/Makefile.fpc
@@ -47,7 +47,7 @@ DBG_OPTIONS=-gw
 endif
 
 [compiler]
-options=-gl -dgtk2 -Sci $(DBG_OPTIONS)
+options=-MObjFPC -Scghi -O1 -g -gl -l -vewnhibq -dgtk2 $(DBG_OPTIONS)
 unitdir=../../units/$(CPU_TARGET)-$(OS_TARGET) \
     ../../../packager/units/$(CPU_TARGET)-$(OS_TARGET) \
     ../../../components/lazutils/lib/$(CPU_TARGET)-$(OS_TARGET) \
