--- a/lcl/interfaces/qt6/Makefile.fpc
+++ b/lcl/interfaces/qt6/Makefile.fpc
@@ -14,7 +14,7 @@ DBG_OPTIONS=-gw
 endif
 
 [compiler]
-options=-gl -dqt6 $(DBG_OPTIONS)
+options=-MObjFPC -Scghi -O1 -g -gl -l -vewnhibq -dqt6 $(DBG_OPTIONS)
 unitdir=../../units/$(CPU_TARGET)-$(OS_TARGET) \
     ../../../packager/units/$(CPU_TARGET)-$(OS_TARGET) \
     ../../../components/lazutils/lib/$(CPU_TARGET)-$(OS_TARGET) \
