--- a/tools/install/rpm/lazarus-project.spec.template
+++ b/tools/install/rpm/lazarus-project.spec.template
@@ -77,7 +77,8 @@ cat lazarus/install/man/man1/lazbuild.1 | gzip > %{buildroot}%{_mandir}/man1/laz
 cat lazarus/install/man/man1/lazarus-ide.1 | gzip > %{buildroot}%{_mandir}/man1/lazarus-ide.1.gz
 cat lazarus/install/man/man1/startlazarus.1 | gzip > %{buildroot}%{_mandir}/man1/startlazarus.1.gz
 cat lazarus/tools/install/linux/environmentoptions.xml | sed -e "s#__LAZARUSDIR__#$LAZARUSDIR/#" -e "s#__FPCSRCDIR__#%{_datadir}/fpcsrc/#" > %{buildroot}%{_sysconfdir}/lazarus/environmentoptions.xml
-
+# prevent stripping:
+exit 0
 
 %clean
 [ %{buildroot} != "/" ] && ( rm -rf %{buildroot} )
