Jedi code format: more options to indent labels (goto label).

--- a/components/jcf2/CommandLine/Lazarus/jcfsettings.cfg
+++ b/components/jcf2/CommandLine/Lazarus/jcfsettings.cfg
@@ -37,6 +37,7 @@
       <IndentNestedTypes> False </IndentNestedTypes>
       <IndentVarAndConstInClass> False </IndentVarAndConstInClass>
       <IndentInterfaceGuid> True </IndentInterfaceGuid>
+      <IndentLabels> 0 </IndentLabels>
   </Indent>
   <Spaces>
       <TabsToSpaces> True </TabsToSpaces>
