--- a/components/jcf2/TestApplication/JCFSettings.cfg
+++ b/components/jcf2/TestApplication/JCFSettings.cfg
@@ -37,6 +37,7 @@
       <IndentNestedTypes> True </IndentNestedTypes>
       <IndentVarAndConstInClass> True </IndentVarAndConstInClass>
       <IndentInterfaceGuid> True </IndentInterfaceGuid>
+      <IndentLabels> 0 </IndentLabels>
   </Indent>
   <Spaces>
       <TabsToSpaces> True </TabsToSpaces>
