Jedi code format: add support for "Whitesmiths" format style.

--- a/components/jcf2/TestApplication/JCFSettings.cfg
+++ b/components/jcf2/TestApplication/JCFSettings.cfg
@@ -24,7 +24,9 @@
       <FirstLevelIndent> 0 </FirstLevelIndent>
       <HasFirstLevelIndent> False </HasFirstLevelIndent>
       <IndentBeginEnd> False </IndentBeginEnd>
+      <IndentExtraTryBlockKeyWords> False </IndentExtraTryBlockKeyWords>
       <IndentbeginEndSpaces> 2 </IndentbeginEndSpaces>
+      <IndentExtraTryBlockKeyWordsSpaces> 2 </IndentExtraTryBlockKeyWordsSpaces>
       <IndentLibraryProcs> True </IndentLibraryProcs>
       <IndentProcedureBody> False </IndentProcedureBody>
       <KeepCommentsWithCodeInGlobals> True </KeepCommentsWithCodeInGlobals>
@@ -38,6 +40,8 @@
       <IndentVarAndConstInClass> True </IndentVarAndConstInClass>
       <IndentInterfaceGuid> True </IndentInterfaceGuid>
       <IndentLabels> 0 </IndentLabels>
+      <IndentEndTryBlockAsCode> False </IndentEndTryBlockAsCode>
+      <IndentExtraOrphanTryBlocks> False </IndentExtraOrphanTryBlocks>
   </Indent>
   <Spaces>
       <TabsToSpaces> True </TabsToSpaces>
