IconFinder: Avoid duplicate processing of default image folder.

--- a/components/iconfinder/demo/IconViewer/IconViewer_Demo.lpi
+++ b/components/iconfinder/demo/IconViewer/IconViewer_Demo.lpi
@@ -41,6 +41,7 @@
         <Filename Value="main.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="MainForm"/>
+        <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
       </Unit>
     </Units>
