IconFinder: Fix compilation of IconViewer demo
(cherry picked from commit d82e6b2dcac3794c84fd8999a7341a0c5221fc4e)

--- a/components/iconfinder/demo/IconViewer/IconViewer_Demo.lpi
+++ b/components/iconfinder/demo/IconViewer/IconViewer_Demo.lpi
@@ -4,6 +4,9 @@
     <Version Value="12"/>
     <PathDelim Value="\"/>
     <General>
+      <Flags>
+        <AlwaysBuild Value="True"/>
+      </Flags>
       <SessionStorage Value="InProjectDir"/>
       <Title Value="IconViewer_Demo"/>
       <Scaled Value="True"/>
