--- a/components/fpdebug/test/FpTest.lpi
+++ b/components/fpdebug/test/FpTest.lpi
@@ -63,7 +63,7 @@
         <PackageName Value="FCL"/>
       </Item5>
     </RequiredPackages>
-    <Units Count="7">
+    <Units Count="8">
       <Unit0>
         <Filename Value="FpTest.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -98,6 +98,11 @@
         <IsPartOfProject Value="True"/>
         <UnitName Value="TestLineMap"/>
       </Unit6>
+      <Unit7>
+        <Filename Value="testasm.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="TestAsm"/>
+      </Unit7>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
