CI: enabled FPDebug test job to run automatically

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -347,7 +347,8 @@ tests-fpdebug: # run FPDebug tests and output results in JUnit format (for this 
     reports:
       junit: $OUTPUT_FILE
   rules:
-    - !reference [.manualjob, rules]
+    - !reference [.runscheduled, rules]
+    - !reference [.onsuccessjob, rules]
 
 tests-lcl: # run LCL tests and output results in JUnit format (for this FPC 3.3.1 and up is needed)
   stage: build
