--- a/tools/install/rpm/lazarus-project.spec.template
+++ b/tools/install/rpm/lazarus-project.spec.template
@@ -1,4 +1,4 @@
-Name:           lazarus
+Name:           lazarus-project
 Version:        LAZVERSION
 Release:        LAZRELEASE
 Summary:        Lazarus Component Library and IDE
@@ -6,12 +6,13 @@ Summary:        Lazarus Component Library and IDE
 Group:          Development/Languages
 License:        GPL and modified LGPL
 URL:            http://www.lazarus.freepascal.org/
-Source0:        http://prdownloads.sourceforge.net/%{name}/%{name}-%{version}-%{release}.tar.gz
+Source0:        https://prdownloads.sourceforge.net/lazarus/lazarus-%{version}-%{release}.tar.gz
 Packager:       Mattias Gaertner
-BuildRoot:      %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
+BuildRoot:      %{_tmppath}/lazarus-%{version}-%{release}-root-%(%{__id_u} -n)
+Conflicts:      lazarus, lazarus-ide, lazarus-docs, lazarus-lcl, lazarus-lcl-gtk, lazarus-lcl-gtk2, lazarus-lcl-gtk3, lazarus-lcl-nogui, lazarus-lcl-qt, lazarus-lcl-qt5, lazarus-lcl-qt6, lazarus-tools
 
-BuildRequires:  fpc = FPCVERSION, gtk2-devel, glibc-devel
-Requires:       fpc-src = FPCSRCVERSION, fpc = FPCVERSION, gtk2-devel, glibc-devel, binutils, gdb
+BuildRequires:  fpc-laz = FPCVERSION, gtk2-devel, glibc-devel
+Requires:       fpc-src-laz = FPCSRCVERSION, fpc-laz = FPCVERSION, gtk2-devel, glibc-devel, binutils, gdb
 
 Requires(post): desktop-file-utils
 Requires(postun): desktop-file-utils
@@ -56,7 +57,7 @@ fi
 
 %install
 [ %{buildroot} != "/" ] && ( rm -rf %{buildroot} )
-LAZARUSDIR=%{_datadir}/%{name}
+LAZARUSDIR=%{_datadir}/lazarus
 mkdir -p %{buildroot}$LAZARUSDIR
 mkdir -p %{buildroot}%{_bindir}
 mkdir -p %{buildroot}%{_datadir}/pixmaps
@@ -76,7 +77,8 @@ cat lazarus/install/man/man1/lazbuild.1 | gzip > %{buildroot}%{_mandir}/man1/laz
 cat lazarus/install/man/man1/lazarus-ide.1 | gzip > %{buildroot}%{_mandir}/man1/lazarus-ide.1.gz
 cat lazarus/install/man/man1/startlazarus.1 | gzip > %{buildroot}%{_mandir}/man1/startlazarus.1.gz
 cat lazarus/tools/install/linux/environmentoptions.xml | sed -e "s#__LAZARUSDIR__#$LAZARUSDIR/#" -e "s#__FPCSRCDIR__#%{_datadir}/fpcsrc/#" > %{buildroot}%{_sysconfdir}/lazarus/environmentoptions.xml
-
+# prevent stripping:
+exit 0
 
 %clean
 [ %{buildroot} != "/" ] && ( rm -rf %{buildroot} )
@@ -89,7 +91,7 @@ update-desktop-database &> /dev/null ||:
 
 %files
 %defattr(-,root,root,-)
-%{_datadir}/%{name}
+%{_datadir}/lazarus
 %{_bindir}/*
   %{_datadir}/pixmaps/lazarus.png
   %{_datadir}/applications/lazarus.desktop
