--- a/ide/lazarus.lpi
+++ b/ide/lazarus.lpi
@@ -1468,6 +1468,13 @@
         <Filename Value="cocoaideformconfig.inc"/>
         <IsPartOfProject Value="True"/>
       </Unit>
+      <Unit>
+        <Filename Value="frames/editor_wordwrap_options.pas"/>
+        <IsPartOfProject Value="True"/>
+        <ComponentName Value="EditorWordWrapOptionsFrame"/>
+        <HasResources Value="True"/>
+        <ResourceBaseClass Value="Frame"/>
+      </Unit>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
